Added fixtures & Entity Ship+Company

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -11,5 +11,5 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            fr
+    locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
