ManyToOne relationship works

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,7 +2,7 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     ragot 
+    database_name:     iaato 
     database_user:     root
     database_password: j1a2l3k4
 
