--- a/src/Ensiie/IaatoBundle/Resources/config/routing.yml
+++ b/src/Ensiie/IaatoBundle/Resources/config/routing.yml
@@ -1,19 +1,9 @@
+iaato_planning:
+    pattern: /planning/{sort}
+    defaults: {_controller: EnsiieIaatoBundle:Iaato:planning, sort:date}
+    requirements:
+        sort: date|ship|company
+
 iaato_homepage:
-    pattern:  /
-    defaults: { _controller: EnsiieIaatoBundle:Iaato:index }
-
-iaato_sort_date:
-    pattern: /sort/date
-    defaults: {_controller: EnsiieIaatoBundle:Iaato:sortDate }
-
-iaato_sort_ship:
-    pattern: /sort/ship
-    defaults: {_controller: EnsiieIaatoBundle:Iaato:sortShip }
-
-iaato_sort_company:
-    pattern: /sort/company
-    defaults: {_controller: EnsiieIaatoBundle:Iaato:sortCompany }
-
-iaato_account:
-    pattern: /account
-    defaults: {_controller: EnsiieIaatoBundle:Iaato:account }
+    pattern: /
+    defaults: {_controller: EnsiieIaatoBundle:Iaato:index }
