--- a/src/Ensiie/IaatoBundle/Resources/config/routing.yml
+++ b/src/Ensiie/IaatoBundle/Resources/config/routing.yml
@@ -17,3 +17,15 @@ iaato_planning_edit:
     defaults: {_controller: EnsiieIaatoBundle:Iaato:editPlanning }
     requirements:
         id: \d+  
+
+iaato_free_sites:
+    pattern: /free-site/{day}/{month}/{year}
+    defaults: {_controller: EnsiieIaatoBundle:Iaato:freeSite}
+    requirements:
+        day: \d+
+        month: \d+
+        year: \d+
+        
+iaato_request_free_sites:
+    pattern: /request-free-site
+    defaults: {_controller: EnsiieIaatoBundle:Iaato:requestFreeSite}
